Service and implementation